2016-10-29  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.4.7

2016-10-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version): Roll minor version and date

	* src/lookup.cpp: Replace omegahat.org with omagehat.net
	* vignettes/RProtoBuf-paper.bib: Ditto

2016-09-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): New release 0.4.6
	* README.md: Expanded, added three short sections

2016-09-08  Dirk Eddelbuettel  <edd@debian.org>

	* inst/NEWS.Rd: Ditto, also replace \cpkg{} with \CRANpkg{}
	* README.md: Use https for CRAN URL

2016-09-06  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/RProtoBuf-paper.Rnw: Comment-out the use of the \DOI
	macro from (updated) jss.cls: cannot ship jss.cls (or R will warn)
	and cannot use \DOI as (as R-release and older do not know \DOI)

2016-09-01  Dirk Eddelbuettel  <edd@debian.org>

	[ Entry for anonymous PR #18 by 'oliverbock' ]
	* R/rexp_obj.R (unrexp_string): Ensure zero-length strings can be
	serialized; special case of native encoding for S4 objects
	* inst/unitTests/runit.serialize_pb.R: New tests

2016-08-29  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): New release 0.4.5

2016-08-16  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (SystemRequirements): Add explicit note that Protocol
	Buffers 3.0.0 are supported as well

2016-08-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version): Rolling minor version

	* inst/proto/addressbook.proto: Added 'syntax = "proto2";'
	* inst/proto/helloworld.proto: Idem
	* inst/proto/rexp.proto: Idem
	* inst/unitTests/data/bytes.proto: Idem
	* inst/unitTests/data/encoding.proto: Idem
	* inst/unitTests/data/nested.proto: Idem
	* inst/unitTests/data/unittest.proto: Idem
	* inst/unitTests/data/unittest_import.proto: Idem
	* vignettes/proto/int64.proto: Idem

	* inst/unitTests/runit.addressbook.R (test.ascii): Comment-out one
	sub-test concerned with access under bad file modes
