@@ -1,6 +1,6 @@
 Package: RProtoBuf
-Version: 0.4.7
-Date: 2016-10-29
+Version: 0.4.7.1
+Date: 2017-01-16
 Author: Romain Francois, Dirk Eddelbuettel, Murray Stokely and Jeroen Ooms
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Title: R Interface to the 'Protocol Buffers' 'API' (Version 2 or 3)
