@@ -1,3 +1,10 @@
+2017-01-16  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION (Version, Date): Roll minor version and date
+
+	* tools/winlibs.R: Use proto3 library from rwinlib repo
+	* src/Makevars.win: Update to proto 3.0.0 paths
+
 2016-10-29  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Release 0.4.7
